--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "WorldQuant Scope",
-    "version": "0.7.1",
+    "version": "0.7.2",
     "description": "可以显示数据分析特征",
     "author": "zhangkaihua@buaa.edu.cn",
     "icons": {
@@ -45,7 +45,8 @@
         },
         {
             "matches": [
-                "*://support.worldquantbrain.com/hc/en-us/community/*"
+                "*://support.worldquantbrain.com/hc/en-us/community/*",
+                "*://support.worldquantbrain.com/hc/en-us/profiles/*"
             ],
             "js": [
                 "scripts/voteup.js"
