--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "WorldQuant Scope",
-    "version": "0.7.3",
+    "version": "0.7.4",
     "description": "可以显示数据分析特征",
     "author": "zhangkaihua@buaa.edu.cn",
     "icons": {
@@ -49,6 +49,7 @@
                 "*://support.worldquantbrain.com/hc/en-us/profiles/*"
             ],
             "js": [
+                "scripts/utils.js",
                 "scripts/voteup.js"
             ],
             "css": [
@@ -61,6 +62,7 @@
                 "*://platform.worldquantbrain.com/genius/*"
             ],
             "js": [
+                "scripts/utils.js",
                 "scripts/genius.js"
             ],
             "css": [
