--- a/manifest.json
+++ b/manifest.json
@@ -74,6 +74,7 @@
         "storage",
         "activeTab",
         "alarms",
-        "notifications"
+        "notifications",
+        "unlimitedStorage"
     ]
 }
