feature: no combine genius and datafield used check 1. genius界面添加不按combine过滤，查看潜在竞争者 2. 在未提交列表alpha信息页面以及alpha详情页面，双击字段弹窗显示字段本赛季提交情况
Signed-off-by: xiscoxu <xujingjie2004@163.com>

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,9 @@
     "content_scripts": [
         {
             "matches": [
-                "*://platform.worldquantbrain.com/*"
+                "*://platform.worldquantbrain.com/*",
+                "*://platform.worldquantbrain.com/alpha/*",
+                "*://platform.worldquantbrain.com/alphas/unsubmitted"
             ],
             "exclude_matches": [
                 "*://platform.worldquantbrain.com/genius/*"
@@ -31,7 +33,8 @@
                 "src/scripts/utils.js",
                 "src/scripts/uiCard.js",
                 "src/scripts/dataAna.js",
-                "src/scripts/noMoreDifficulties.js"
+                "src/scripts/noMoreDifficulties.js",
+                "src/scripts/alphaDetailsPopup.js"
             ],
             "css": [
                 "src/css/idcard.css"
