--- a/.github/workflows/release-on-version-change.yml
+++ b/.github/workflows/release-on-version-change.yml
@@ -43,16 +43,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git tag "v$VERSION"
-        git push origin "v$VERSION"
+        git tag "v${{ env.VERSION }}"
+        git push origin "v${{ env.VERSION }}"
 
         curl -X POST -H "Authorization: token $GITHUB_TOKEN" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/releases \
-          -d '{
-            "tag_name": "v$VERSION",
-            "name": "v$VERSION",
-            "body": "Release version $VERSION",
-            "draft": false,
-            "prerelease": false
-          }'
+          -d "{\n            \"tag_name\": \"v${{ env.VERSION }}\",\n            \"name\": \"v${{ env.VERSION }}\",\n            \"body\": \"Release version ${{ env.VERSION }}\",\n            \"draft\": false,\n            \"prerelease\": false\n          }"
