--- a/.github/workflows/release-on-version-change.yml
+++ b/.github/workflows/release-on-version-change.yml
@@ -49,4 +49,10 @@ jobs:
         curl -X POST -H "Authorization: token $GITHUB_TOKEN" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/${{ github.repository }}/releases \
-          -d "{\n            \"tag_name\": \"${{ env.VERSION }}\",\n            \"name\": \"${{ env.VERSION }}\",\n            \"body\": \"Release version ${{ env.VERSION }}\",\n            \"draft\": false,\n            \"prerelease\": false\n          }"
+          -d '{
+            "tag_name": "${{ env.VERSION }}",
+            "name": "${{ env.VERSION }}",
+            "body": "Release version ${{ env.VERSION }}",
+            "draft": false,
+            "prerelease": false
+          }'
