fix: 修复other pay数字看不清看不全的问题

--- a/manifest.json
+++ b/manifest.json
@@ -40,6 +40,15 @@
         },
         {
             "matches": [
+                "*://platform.worldquantbrain.com/profile/performance"
+            ],
+            "js": [
+                "src/scripts/performanceStyleFix.js"
+            ],
+            "run_at": "document_end"
+        },
+        {
+            "matches": [
                 "*://support.worldquantbrain.com/*",
                 "*://support.worldquantbrain.com/*"
             ],
